# DeepSeek-TUI

./: .cnb.yml  .dockerignore  .env.example  .gitguardian.yaml  .gitignore  AGENTS.md  AI_HANDOFF.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  FEATURE_PROPOSAL.md  LICENSE  PARITY.md  README.md  README.zh-CN.md  TAKEOVER_PROMPT.md  VISION_MODEL_FEATURE.md  config.example.mcp.json  config.example.toml  flake.nix  lessons.md  package.json  pnpm-lock.yaml  pyproject.toml  rlm_catalog.md  rlm_test_doc.md  roadmap.md  session_20260216_095242.json  session_20260216_095908.json  session_20260216_100056.json  session_20260216_101655.json  session_20260216_102128.json  session_20260216_103041.json  session_20260216_103448.json  session_20260216_104548.json  session_20260216_105657.json  (+71 more)
.codex/: bug-hunt-fixes.md
.devcontainer/: devcontainer.json
.github/: issue-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: ci.yml  crates-publish.yml  issue-labeler.yml  nightly.yml  parity.yml  publish-npm.yml  release.yml  sync-cnb.yml  sync-upstream.yml  vscode-publish.yml
Formula/: deepseek-tui.rb
app/: globals.css  layout.tsx  page.tsx
apps/deepseek-app/: README.md  package.json  vitest.config.ts
components/: types.ts
components/chat/: ConnectionBanner.tsx  (+4 more)
core/: main.py  playwright_wrapper.py  process_manager.py
crates/deepmap/: Cargo.toml
crates/deepmap/src/: cache.rs  diagnostics.rs  engine.rs  git.rs  lib.rs  parser.rs  queries.rs  ranking.rs  renderer.rs  resolver.rs  topic.rs  types.rs
crates/deepmap/tests/: integration_test.rs  smoke_test.rs
crates/ide-bridge/: Cargo.toml
crates/ide-bridge/src/: client.rs  discovery.rs  lib.rs  protocol.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: discovery.rs  lib.rs  manager.rs  manifest.rs
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CACHE_ORCHESTRATION.md  CNB_MIRROR.md  CONFIGURATION.md  CONFIGURATION.zh-CN.md  CUSTOM_THEME.md  DEEPMAP.md  DEEPMAP.zh-CN.md  DOCKER.md  INSTALL.md  INSTALL.zh-CN.md  KEYBINDINGS.md  KEYBINDINGS.zh-CN.md  LLM_SECURITY_ANALYSIS.md  LOCALIZATION.md  MCP.md  MEMORY.md  MEMORY.zh-CN.md  MOBILE_FEISHU_RUNTIME_CONTRACT.md  MODES.md  MODES.zh-CN.md  OPERATIONS_RUNBOOK.md  PALETTE.md  PLUGIN_SYSTEM.md  README.md  RELEASE_RUNBOOK.md  RLM.md  RUNTIME_API.md  SECURITY_LAYER.md  SUBAGENTS.md  SURPASS_CLAUDE_CODE_PLAN.md  TOOL_SURFACE.md  VECTOR_MEMORY_AUDIT.md  VOICE_AND_TONE.md  capacity_controller.md  deepseek_cache_prefix_churn.md  file-policy-design.md  rlm_gap_analysis.md
hooks/: use-keyboard-shortcuts.ts  use-speech-recognition.ts
lib/: command-registry.test.ts  escape-behavior.test.ts  live-event-compaction.ts  live-event-filters.test.ts  run-state.ts  runtime-api.test.ts  runtime-api.ts  thread-utils.test.ts  ui-persistence.ts
nix/: package.nix
npm/: cli.js  install.js  package.json
refs/: execpolicy.example.toml
scripts/: mcp-resolve.sh  vsc-publish.sh
src/: client.rs  compaction.rs  config.rs  features.rs  hooks.rs  llm_client.rs  main.rs  mcp.rs  models.rs  palette.rs  pricing.rs  project_context.rs  project_doc.rs  prompts.rs  rlm.rs  runtime_api.rs  runtime_threads.rs  session_manager.rs  settings.rs  skills.rs  task_manager.rs  utils.rs  working_set.rs
src-tauri/: Cargo.toml  tauri.conf.json
test/: composer.shortcuts.test.tsx  design-tokens.guardrail.test.ts  git-integration.test.tsx  live-events-panel.test.tsx  page.automation-ui.test.tsx  page.offline-draft.test.tsx  page.small-window.test.tsx  session-continuity.test.ts  task-detail.test.tsx  thread-grouping.test.ts  threads-pane.keyboard.test.tsx  topbar-actions.test.tsx  transcript-pane.test.tsx  use-keyboard-shortcuts.test.tsx  use-speech-recognition.test.ts
tests/: palette_audit.rs
wagmii-tui/: Cargo.toml
web/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+630 files in other folders)
