[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepSeek-CLI"
version = "0.0.1"
description = "Unofficial DeepSeek CLI - downloads and runs the Rust binary"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hmbown" }]
keywords = ["deepseek", "cli", "ai", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Hmbown/DeepSeek-CLI"
Source = "https://github.com/Hmbown/DeepSeek-CLI"

[project.scripts]
deepseek-cli = "deepseek_cli.cli:main"

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]
